Commit from TeleportHQ

--- a/contatti.html
+++ b/contatti.html
@@ -101,30 +101,7 @@
             </div>
           </header>
         </div>
-        <div class="contatti-banner">
-          <h1 class="contatti-text01">Contatti</h1>
-          <span class="contatti-text02">
-            <span>
-              In questo momento i nostri corsi in presenza sono ancora sospesi.
-              Le nostre attività sono al momento online. Puoi contattarci
-              comunque ai riferimenti sotto per qualsiasi informazione.
-            </span>
-            <br />
-            <br />
-            <span>Alessandro +39 373 534 3072</span>
-            <br />
-            <br />
-            <a
-              href="https://api.whatsapp.com/send?phone=393735343072&amp;text=informazioni%20Corsi%20Sahaja%20Yoga%20Trieste"
-              target="_blank"
-              rel="noreferrer noopener"
-              class="contatti-link"
-            >
-              WhatsApp
-            </a>
-            <br />
-          </span>
-        </div>
+        <div class="contatti-banner"></div>
         <footer class="contatti-footer">
           <div class="contatti-content">
             <div class="contatti-contact">
