--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 <div class="home-case">
                   <img
                     alt="image"
-                    src="public/playground_assets/together-desktop-0163b130657fdd6df1e4e9aa3d04c4762d0f2b9f242445b891e6c16596a39587-e1568842412140-1400w.jpg"
+                    src="public/playground_assets/picture%202-1400w.jpg"
                     class="home-image2"
                   />
                   <div class="home-heading">
@@ -202,7 +202,7 @@
                 <img
                   alt="image"
                   src="public/playground_assets/facebook%20-%20negative.svg"
-                  class="social"
+                  class="home-image5 social"
                 />
               </a>
               <a
@@ -213,7 +213,7 @@
                 <img
                   alt="image"
                   src="public/playground_assets/instagram%20-%20negative.svg"
-                  class="social"
+                  class="home-image6 social"
                 />
               </a>
               <a
@@ -224,7 +224,7 @@
                 <img
                   alt="image"
                   src="public/playground_assets/youtube%20-%20negative.svg"
-                  class="social"
+                  class="home-image7 social"
                 />
               </a>
             </div>
